@@ -5,10 +5,23 @@
  *      Author: Morphe
  */
 
+#if HAVE_CONFIG_H
+#include <config.h>
+#endif
+
 #include "XEditorWindow.h"
 #include <sstream>
+#include <string.h>
+
+#define NEWLINE L"\r\n"
 
 namespace XEditor {
+
+std::vector<std::wstring> split_lines(const std::wstring &text);
+std::wstring PasteFromClipboard(Window &wnd);
+void CopyToClipboard(Window &wnd, const std::wstring &text);
+std::wstring StrTrimRight(const std::wstring& str);
+bool Inbetween(int a, int b, int x);
 
 XEditorWindow::XEditorWindow() :
 	Window(L"", WS_CHILD | WS_VISIBLE, 0, 0, 0, 0, 0, 0, 0){
@@ -17,10 +30,12 @@ XEditorWindow::XEditorWindow() :
 XEditorWindow::XEditorWindow(int x, int y, int width, int height,
 		Window& parentWnd) :
 	Window(L"", WS_CHILD | WS_VISIBLE, x, y, width, height, parentWnd, 0, 0) {
-	textFont_ = Drawing::Drawer::getLogFont((HFONT)GetStockObject(SYSTEM_FIXED_FONT));
+//	textFont_ = Drawing::Drawer::getLogFont((HFONT)GetStockObject(SYSTEM_FIXED_FONT));
+	selectDefFont();
 	lines_.push_back(L"");
 	RECT t {0, 0, 0, 0};
-	calcTxtRect(L"A", textFont_, t); // initialize maxCharacterHeight_
+	calcLineRect(L"A", t); // since we are here, we really suppose to call XEditorWindow::calcLineRect - NOT it's derivatives
+	stdCharHeight_ = t.bottom;
 }
 
 XEditorWindow::~XEditorWindow() {
@@ -38,31 +53,63 @@ LRESULT XEditorWindow::WndProc(UINT msg, WPARAM wParam, LPARAM lParam) {
 		WMKillFocus();
 		return 0;
 	case WM_CHAR:
-		WMChar((wchar_t)wParam);
+		if(!(GetKeyState(VK_CONTROL) & 0x80))
+			charInput((wchar_t)wParam);
 		break;
 	case WM_KEYDOWN:
 		WMKeyDown((char) wParam);
+		break;
+	case WM_MOUSEMOVE:
+	case WM_LBUTTONDOWN:
+	case WM_LBUTTONUP:
+		mouseMsg(msg);
 		break;
 	}
 	return Window::WndProc(msg, wParam, lParam);
 }
 
 void XEditorWindow::PaintWindow(Drawing::Drawer& drawer) {
-	RECT txtRect {0, 0, 0, 0};
-	int top = 0;
-	drawer.setFont(CreateFontIndirect(&textFont_));
 	POINT org;
+	drawer.setFont(CreateFontIndirect(&textFont_));
+	SetBkMode(drawer.getDC(), TRANSPARENT);
 	GetWindowOrgEx(drawer.getDC(), &org);
 //	HRGN oldClipRgn = CreateRectRgn(0, 0, 0, 0);
 //	GetClipRgn(drawer.getDC(), oldClipRgn);
-	for(auto line : getLines()) {
-		calcTxtRect(line, textFont_, txtRect);
-		SetWindowOrgEx(drawer.getDC(), org.x, org.y - top, 0);
+	int selectionLineStart = getSelectionStart().first,
+		selectionLineEnd = getSelectionEnd().first,
+		selectionStart = getSelectionStart().second,
+		selectionEnd = getSelectionEnd().second;
+
+	int top = - screenStartY_;
+	bool bVisibleSectionReached = false;
+	for(int i = 0; i < getLines().size() && top < getSizeY(); ++i) {
+		if(getLine(i).empty()) {
+			top += stdCharHeight_;
+			continue;
+		}
+
+		RECT txtRect {0, 0, 0, 0};
+		SetWindowOrgEx(drawer.getDC(), org.x - screenStartX_, org.y - top, 0);
+		if(!bVisibleSectionReached) {
+			outputLine(drawer, getLine(i), txtRect, true);
+			if(top + txtRect.bottom > 0)
+				bVisibleSectionReached = true;
+		}
+		if(bVisibleSectionReached)
+			outputLine(drawer, getLine(i), txtRect, false,
+					!hasSelection() ?
+							-1 :
+					i == selectionLineStart ?
+							selectionStart :
+					(selectionLineStart < i && i <= selectionLineEnd) ?
+							0 : -1,
+					i == selectionLineEnd ?
+							selectionEnd : -1);
 //		HRGN newClipRgn = CreateRectRgnIndirect(&txtRect);
 //		SelectClipRgn(drawer.getDC(), newClipRgn);
 //		DeleteObject(newClipRgn);
-		outputLine(drawer, line, txtRect);
-		top += maxCharHeight_;
+
+		top += txtRect.bottom - txtRect.top;
 	}
 	SetWindowOrgEx(drawer.getDC(), org.x, org.y, 0);
 //	SelectClipRgn(drawer.getDC(), oldClipRgn);
@@ -79,15 +126,13 @@ std::wstring XEditorWindow::GetThemeApplicableClassList() {
 	return L"TEXTSTYLE;" + Window::GetThemeApplicableClassList();
 }
 
-void XEditorWindow::calcTxtRect(const std::wstring &str, LOGFONT font, RECT &txtRect) {
+void XEditorWindow::calcLineRect(const std::wstring &line, RECT &txtRect) {
 	std::shared_ptr<Drawing::Drawer> drawerPtr = getDrawer();
-	drawerPtr->setFont(CreateFontIndirect(&font));
-	drawerPtr->drawText(str, DT_CALCRECT, txtRect);
+	drawerPtr->setFont(CreateFontIndirect(&textFont_));
+	outputLine(*drawerPtr, line, txtRect, true);
 	drawerPtr->clearFont();
-	if(txtRect.bottom - txtRect.top > maxCharHeight_)
-		maxCharHeight_ = txtRect.bottom - txtRect.top;
-	else
-		txtRect.bottom = txtRect.top + maxCharHeight_;
+	if(txtRect.bottom - txtRect.top < stdCharHeight_)
+		txtRect.bottom = txtRect.top + stdCharHeight_;
 }
 
 void XEditorWindow::WMSize(POINTS size) {
@@ -99,29 +144,77 @@ void XEditorWindow::WMKillFocus() {
 }
 
 void XEditorWindow::WMSetFocus() {
-    ::CreateCaret(*this, 0, 0, maxCharHeight_);
+    ::CreateCaret(*this, 0, 0, stdCharHeight_);
     repositionCaret();
     ::ShowCaret(*this);
 }
 
 std::wstring XEditorWindow::getSelection() const {
+	if(!hasSelection())
+		return L""; // no selection
+
+
+	if(getSelectionStart().first == getSelectionEnd().first)
+		return getLine(getSelectionStart().first).substr(getSelectionStart().second, getSelectionEnd().second - getSelectionStart().second);
+
+	std::wstring selection;
+	selection += getLine(getSelectionStart().first).substr(getSelectionStart().second) + NEWLINE;
+	for(int i = getSelectionStart().first + 1; i < getSelectionEnd().first; ++i)
+		selection += getLine(i) + NEWLINE;
+	selection += getLine(getSelectionEnd().first).substr(0, getSelectionEnd().second);
+
+	return selection;
 }
 
-void XEditorWindow::replaceSelection(std::wstring selection) {
+void XEditorWindow::removeSelection() {
+	int selectionStartLine = getSelectionStart().first,
+		selectionStartChar = getSelectionStart().second,
+		selectionEndLine = getSelectionEnd().first,
+		selectionEndChar = getSelectionEnd().second;
+
+	setCurrentPosition(selectionStartLine, selectionStartChar);
+
+	setLine(selectionStartLine, getLine(selectionStartLine).substr(0, selectionStartChar) +
+			getLine(selectionEndLine).substr(selectionEndChar));
+
+	if(getSelectionStart().first != getSelectionEnd().first) {
+		getLines().erase(getLineIt(selectionStartLine + 1), getLineIt(selectionEndLine));
+		invalidateLines(selectionStartLine, getLines().size());
+	} else
+		invalidateLine(selectionStartLine);
+
 }
 
 void XEditorWindow::invalidateScreen() {
-	invalidatedLine_ = -1;
 	UpdateWindow();
 }
 
-void XEditorWindow::invalidateLine() {
-	RECT lineRect {0, maxCharHeight_ * (currentLine_ - screenStartLine_), 0, 0};
-	if(lineRect.top < 0 || lineRect.top > getSizeY())
-		return;
-	invalidatedLine_ = currentLine_;
-	calcTxtRect(getCurrentLine(), textFont_, lineRect);
-	UpdateWindow(&lineRect);
+void XEditorWindow::invalidateLines(int start, int end) {
+	RECT updateRect {0, 0, getSizeX(), 0};
+	int top = - screenStartY_;
+
+	if(start < 0)
+		start = 0;
+	if(end > getLines().size())
+		end = getLines().size();
+
+	for(int i = 0; i < end && top < getSizeY(); ++i) {
+		RECT txtRect {0, 0, 0, 0};
+		if(getLine(i).empty())
+			txtRect.bottom = stdCharHeight_;
+		else
+			calcLineRect(getLine(i), txtRect);
+		if(i == start)
+			updateRect.top = top;
+
+		top += txtRect.bottom - txtRect.top;
+	}
+	if(end == getLines().size())
+		updateRect.bottom = getSizeY();
+	else
+		updateRect.bottom = top;
+
+	UpdateWindow(&updateRect);
 }
 
 void XEditorWindow::PrePaintWindow(RECT& updateRect) {
@@ -134,22 +227,57 @@ void XEditorWindow::PostPaintWindow(RECT& updateRect) {
 
 void XEditorWindow::repositionCaret() {
     RECT txtRect {0, 0, 0, 0};
-    calcTxtRect(getCurrentLine().substr(0, currentChar_), textFont_, txtRect);
-    ::SetCaretPos(txtRect.right, getCurrentLinePosition() * maxCharHeight_);
+    calcLineRect(getCurrentLine().substr(0, currentChar_), txtRect);
+    ::SetCaretPos(txtRect.right, getCurrentLinePosition() * stdCharHeight_);
 
 }
 
-void XEditorWindow::WMChar(wchar_t ch) {
+void XEditorWindow::invalidateCurrentLine() {
+	invalidateLine(getCurrentLinePosition());
+}
+
+void XEditorWindow::removeCharAt(int line, int position) {
+	if(position == -1) {
+		// concat with prev line
+		if(line == 0)
+			return;
+		setLine(line - 1, getLine(line - 1) + getLine(line));
+		invalidateLine(line - 1);
+		removeLine(line);
+	} else if(position == getLine(line).size()) {
+		// concat with next line
+		if(line == getLines().size() - 1)
+			return;
+		setLine(line, getLine(line) + getLine(line + 1));
+		invalidateLine(line);
+		removeLine(line + 1);
+	} else {
+		getLineIt(line)->erase(position, 1);
+		invalidateLine(line);
+	}
+
+}
+
+void XEditorWindow::charInput(wchar_t ch) {
 	switch (ch)
 	{
-	case 0x08:  // backspace
 	case 0x0A:  // linefeed
 	case 0x1B:  // escape
 		MessageBeep((UINT) -1);
 		break;
 
+	case 0x08:  // backspace
+		if(!hasSelection()) {
+			int line = getCurrentLinePosition(),
+				pos = getCurrentCharPosition();
+			moveToPrevChar();
+			removeCharAt(line, pos - 1);
+		} else
+			removeSelection();
+		break;
+
 	case 0x0D:  // carriage return
-		replaceSelection(L"");
+		removeSelection();
 //		insertLine(currentLine_ + 1, L"");
 		insertText(getCurrentLinePosition(), getCurrentCharPosition(), L"\n");
 		moveToNextLine();
@@ -159,7 +287,7 @@ void XEditorWindow::WMChar(wchar_t ch) {
 		getLineIt(getCurrentLinePosition())->insert(getLineIt(getCurrentLinePosition())->begin() + getCurrentCharPosition(), ch);
 		moveToNextChar();
 		repositionCaret();
-		invalidateLine();
+		invalidateCurrentLine();
 		break;
 	}
 }
@@ -198,6 +326,8 @@ void XEditorWindow::moveToNextChar() {
 }
 
 void XEditorWindow::setCurrentLinePosition(int line) {
+	if(hasSelection())
+		invalidateLines(std::min(line, currentLine_), std::max(line, currentLine_) + 1);
 	if(line < 0)
 		currentLine_ = 0;
 	else if(line >= getLines().size())
@@ -208,6 +338,8 @@ void XEditorWindow::setCurrentLinePosition(int line) {
 }
 
 void XEditorWindow::setCurrentCharPosition(int position) {
+	if(hasSelection())
+		invalidateLine(currentLine_);
 	if(position < 0)
 		currentChar_ = 0;
 	else if(position > getCurrentLine().size())
@@ -227,17 +359,18 @@ std::wstring& XEditorWindow::insertLine(int at, const std::wstring &line) {
 
 	if(currentLine_ > at)
 		++currentLine_;
-	if(screenStartLine_ > at)
-		++screenStartLine_;
 
 	repositionCaret();
-	invalidateScreen();
+	invalidateLines(at, getLines().size());
 	return *res;
 }
 
-void XEditorWindow::insertText(int line, int position,
+std::tuple<std::vector<std::wstring>::size_type, std::wstring::size_type>
+XEditorWindow::insertText(int line, int position,
 		const std::wstring& text) {
 	std::vector<std::wstring> lines = split_lines(text);
+	if(lines.empty())
+		return std::make_tuple(line, position);
 	std::wstring t = getLine(line).substr(0, position), rem = getLine(line).substr(position);
 
 	t += lines.front();
@@ -253,11 +386,13 @@ void XEditorWindow::insertText(int line, int position,
 		currentChar_ += lines.back().size() - t.size();
 	}
 
-	if(screenStartLine_ > line)
-		screenStartLine_ += lines.size();
-
 	repositionCaret();
-	invalidateScreen();
+	invalidateLines(line, getLines().size());
+
+	if(lines.size() == 1)
+		return std::make_tuple(line, position + lines.back().size());
+	else
+		return std::make_tuple(line + lines.size() - 1, lines.back().size());
 }
 
 //void XEditorWindow::advanceLine(int diff) {
@@ -272,6 +407,28 @@ void XEditorWindow::insertText(int line, int position,
 
 void XEditorWindow::WMKeyDown(char keyCode) {
 	int lastPosition;
+
+	if(GetKeyState(VK_CONTROL) & 0x80)
+		controlKey(keyCode);
+
+	bool shiftDown = GetKeyState(VK_SHIFT) & 0x80;
+
+	switch(keyCode) {
+	case VK_END:
+	case VK_HOME:
+	case VK_LEFT:
+	case VK_UP:
+	case VK_RIGHT:
+	case VK_DOWN:
+		if(shiftDown && !selecting_)
+			startSelection();
+		else if(!shiftDown && selecting_)
+			clearSelection();
+		break;
+	default:
+		break;
+	}
+
 	switch(keyCode) {
 	case VK_UP:
 		lastPosition = getCurrentCharPosition();
@@ -295,9 +452,18 @@ void XEditorWindow::WMKeyDown(char keyCode) {
 	case VK_END:
 		moveToLineEnd();
 		break;
+	case VK_DELETE:
+		if(!hasSelection())
+			removeCharAt(getCurrentLinePosition(), getCurrentCharPosition());
+		else
+			removeSelection();
+		break;
 	default:
 		break;
 	}
+}
+
+void XEditorWindow::WMKeyUp(char keyCode) {
 }
 
 std::ostream& operator <<(std::ostream& stream,
@@ -337,8 +503,73 @@ void XEditorWindow::setCurrentLine(const std::wstring& line) {
 }
 
 void XEditorWindow::outputLine(Drawing::Drawer& partDrawer,
-		const std::wstring& line, RECT txtRect) {
-	partDrawer.drawText(line, 0, txtRect);
+		const std::wstring& line, RECT &txtRect, bool bSimulate, int selStart, int selEnd) {
+
+	partDrawer.drawText(line, DT_CALCRECT, txtRect);
+
+	if(selStart != -1) {
+		RECT leftRect {0, 0, 0, 0}, fillRect {0, 0, 0, 0}, rightRect {0, 0, 0, 0};
+		partDrawer.drawText(line.substr(0, selStart), DT_CALCRECT, leftRect);
+		fillRect.left = leftRect.right;
+		if(selEnd == -1) {
+			partDrawer.drawText(line.substr(selStart), DT_CALCRECT, fillRect);
+			fillRect.right = getSizeX();
+		} else {
+			partDrawer.drawText(line.substr(selStart, selEnd - selStart), DT_CALCRECT, fillRect);
+			rightRect.left = fillRect.right;
+			partDrawer.drawText(line.substr(selEnd), DT_CALCRECT, rightRect);
+		}
+		if(fillRect.bottom - fillRect.top < stdCharHeight_)
+			fillRect.bottom = fillRect.top + stdCharHeight_;
+
+		HBRUSH br = CreateSolidBrush(RGB(0, 0, 200));
+		partDrawer.fillRect(fillRect, br);
+		DeleteObject(br);
+
+		if(!bSimulate) {
+			partDrawer.drawText(line.substr(0, selStart), 0, leftRect);
+			partDrawer.setTextColor(RGB(0xFF, 0xFF, 0xFF));
+			if(selEnd != -1) {
+				partDrawer.drawText(line.substr(selStart, selEnd - selStart), 0, fillRect);
+				partDrawer.setTextColor(RGB(0, 0, 0));
+				partDrawer.drawText(line.substr(selEnd), 0, rightRect);
+			} else {
+				partDrawer.drawText(line.substr(selStart), 0, fillRect);
+				partDrawer.setTextColor(RGB(0, 0, 0));
+			}
+		}
+	} else if(!bSimulate)
+		partDrawer.drawText(line, 0, txtRect);
+}
+
+void XEditorWindow::copySelection() {
+	if (hasSelection())
+		CopyToClipboard(*this, getSelection());
+}
+
+void XEditorWindow::pasteAtCursor() {
+	std::wstring buf;
+	buf = PasteFromClipboard(*this);
+	removeSelection();
+	auto pos = insertText(getCurrentLinePosition(), getCurrentCharPosition(),
+			buf);
+	setCurrentPosition(std::get<0>(pos), std::get<1>(pos));
+}
+
+void XEditorWindow::controlKey(wchar_t key) {
+
+	switch(key) {
+	case 'C':
+		copySelection();
+		break;
+	case 'V':
+		pasteAtCursor();
+		break;
+	case 'X':
+		copySelection();
+		removeSelection();
+		break;
+	}
 }
 
 std::vector<std::wstring>& XEditorWindow::getLines() {
@@ -347,17 +578,166 @@ std::vector<std::wstring>& XEditorWindow::getLines() {
 
 void XEditorWindow::setLine(int line, const std::wstring& str) {
 	getLines()[line] = str;
+	invalidateLine(line);
+}
+
+std::wstring StrTrimRight(const std::wstring& str) {
+	int i;
+	for(i = str.size() - 1; i >= 0 && isspace(str[i]); --i);
+	return str.substr(0, i+1);
 }
 
 std::vector<std::wstring> split_lines(const std::wstring& text) {
 	std::vector<std::wstring> lines;
 	std::wstringstream ss {text};
 	std::wstring tmp;
+
 	while(!ss.eof()) {
 		std::getline(ss, tmp);
-		lines.push_back(tmp);
+		lines.push_back(StrTrimRight(tmp));
 	}
 	return lines;
+}
+
+void CopyToClipboard(Window &wnd, const std::wstring &text) {
+    // Open and empty existing contents.
+    if (OpenClipboard(wnd)) {
+        if (EmptyClipboard()) {
+            size_t sz = sizeof(wchar_t) * (text.size() + 1);
+            HGLOBAL hClipboardData  = ::GlobalAlloc(GMEM_DDESHARE | GMEM_ZEROINIT, sz);
+
+            if (hClipboardData != NULL) {
+                void* memory = GlobalLock(hClipboardData);
+
+                if (memory != nullptr) {
+                    memcpy(memory, text.c_str(), sz);
+                    GlobalUnlock(hClipboardData);
+
+                    if (SetClipboardData(CF_UNICODETEXT, hClipboardData) != NULL)
+                        hClipboardData = NULL; // system now owns the clipboard, so don't touch it.
+                }
+                GlobalFree(hClipboardData); // free if failed
+            }
+        }
+        CloseClipboard();
+    }
+}
+
+std::wstring PasteFromClipboard(Window &wnd) {
+	std::wstring res;
+
+    // Copy Unicode text from clipboard.
+    if (OpenClipboard(wnd)) {
+        HGLOBAL hClipboardData = GetClipboardData(CF_UNICODETEXT);
+        DWORD dwLE = GetLastError();
+        if (hClipboardData != NULL) {
+            // Get text and size of text.
+            size_t sz = GlobalSize(hClipboardData);
+            void* memory = GlobalLock(hClipboardData);
+            const wchar_t* text = reinterpret_cast<const wchar_t*>(memory);
+
+            if (memory != nullptr) {
+            	res = text;
+                GlobalUnlock(hClipboardData);
+            }
+        }
+        CloseClipboard();
+    }
+    return res;
+}
+
+int XEditorWindow::getStdCharHeight() const {
+	return stdCharHeight_;
+}
+
+void XEditorWindow::invalidateLine(int line) {
+	invalidateLines(line, line+1);
+}
+
+void XEditorWindow::removeLine(int line) {
+	getLines().erase(getLineIt(line));
+
+	if(currentLine_ == line)
+		moveToLineBegin();
+	if(currentLine_ >= line)
+		--currentLine_;
+
+	repositionCaret();
+	invalidateLines(line, getLines().size());
+}
+
+void XEditorWindow::setSelection(int startLine, int startPosition, int line,
+		int position) {
+	selecting_ = true;
+	selStartLine_ = startLine;
+	selStartChar_ = startPosition;
+	currentLine_ = line;
+	currentChar_ = position;
+}
+
+void XEditorWindow::startSelection() {
+	selecting_ = true;
+	selStartLine_ = getCurrentLinePosition();
+	selStartChar_ = getCurrentCharPosition();
+}
+
+std::pair<int, int> XEditorWindow::getSelectionStart() const {
+	if(selStartLine_ > currentLine_ ||
+			(selStartLine_ == currentLine_ && selStartChar_ > currentChar_))
+		return {currentLine_, currentChar_};
+	else
+		return {selStartLine_, selStartChar_};
+}
+
+std::pair<int, int> XEditorWindow::getSelectionEnd() const {
+	if(selStartLine_ > currentLine_ ||
+			(selStartLine_ == currentLine_ && selStartChar_ > currentChar_))
+		return {selStartLine_, selStartChar_};
+	else
+		return {currentLine_, currentChar_};
+}
+
+bool XEditorWindow::hasSelection() const {
+	return selStartLine_ != -1;
+}
+
+void XEditorWindow::selectDefFont() {
+	LOGFONT font;
+	memset(&font, 0, sizeof(font));
+
+	wcscpy(font.lfFaceName, L"Consolas");
+	font.lfHeight = -MulDiv(10, GetDeviceCaps(getDC(), LOGPIXELSY), 72);
+	font.lfCharSet = DEFAULT_CHARSET;
+	font.lfOutPrecision = OUT_OUTLINE_PRECIS;
+	font.lfClipPrecision = CLIP_DEFAULT_PRECIS;
+	font.lfQuality = CLEARTYPE_QUALITY;
+	font.lfPitchAndFamily = VARIABLE_PITCH;
+	selectFont(font);
+}
+
+void XEditorWindow::selectFont(LOGFONT font) {
+	textFont_ = font;
+	invalidateScreen();
+}
+
+void XEditorWindow::mouseMsg(UINT msg) {
+	switch(msg) {
+	case WM_LBUTTONUP:
+	case WM_LBUTTONDOWN:
+	case WM_MOUSEMOVE:
+		break;
+	}
+}
+
+void XEditorWindow::clearSelection() {
+	invalidateLines(std::min(selStartLine_, currentLine_), std::max(selStartLine_, currentLine_) + 1);
+	selecting_ = false;
+	selStartLine_ = -1;
+	selStartChar_ = -1;
+}
+
+inline bool Inbetween(int a, int b, int x) {
+	return (a <= x && x < b) || (b <= x && x < a);
 }
 
 } /* namespace XEditor */
