@@ -1,3 +1,10 @@
+2012-12-16  Morphe  <Morphe@Morphe-PC>
+
+	* src\GeneralControls\XEditor\XEditorWindow.cpp: Added config.h
+	Using custom font
+	Added copy-paste support
+	Added selection (only keyboard controlled) support
+
 2012-12-15  Morphe  <Morphe@Morphe-PC>
 
 	* src\GeneralControls\XEditorWindow.h (XEditorWindow): Moved lots of code handling position to methods
